Fix visible empty space and outline for no-media

--- a/assets/quick-order-form.css
+++ b/assets/quick-order-form.css
@@ -86,7 +86,10 @@
   width: 2.6rem;
   height: 2.6rem;
   border: min(var(--media-border-width), 1.3rem) solid rgba(var(--color-foreground),var(--media-border-opacity));
-  background-color: transparent;
+}
+
+.quick-order-form .variant-item__image-container--no-img {
+  display: none;
 }
 
 .quick-order-form tr .variant-item__media {
